--- a/src/components/ControlPanel/style.scss
+++ b/src/components/ControlPanel/style.scss
@@ -17,6 +17,14 @@
       transform: translateY(6px);
       box-shadow: none !important;
     }
+    .icon {
+      width: 40px;
+      object-fit: 100%;
+      height: 40px;
+
+      &__play {
+      }
+    }
   }
   // &__reset {
 
