--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -26,6 +26,6 @@ $btnColor: rgb(219, 82, 77);
   background-color: white;
 
   transition: color 0.5s ease-in-out 0s;
-  cursor: pointer;
+  cursor: grab;
   border: none;
 }
