--- a/src/components/Session/style.scss
+++ b/src/components/Session/style.scss
@@ -1,3 +1,4 @@
+@import '../../scss/variables.scss';
 $btnColor: #0a1d37;
 
 .session {
@@ -23,10 +24,7 @@ $btnColor: #0a1d37;
         box-shadow: none;
       }
       &.not-allowed {
-        opacity: 0.3;
-        cursor: not-allowed;
-        transform: none;
-        box-shadow: none;
+        @include not-allowed;
       }
     }
   }
