--- a/src/components/Timer/style.scss
+++ b/src/components/Timer/style.scss
@@ -1,6 +1,6 @@
 @import '../../scss/variables.scss';
 
-$strokeColor: #f44336;
+$strokeColor: #e94057;
 $fillColor: #e99497;
 $textColor: #ededed;
 
@@ -50,13 +50,12 @@ $textColor: #ededed;
     letter-spacing: 3px;
 
     .time__label {
-      font-size: 20px;
+      font-size: 19px;
     }
     .time__left {
       font-size: 65px;
       margin: 40px 0;
       &:hover {
-        color: rgba(255, 255, 255, 0);
         background: linear-gradient(
           57deg,
           #76e650 -1.13%,
@@ -67,13 +66,33 @@ $textColor: #ededed;
           #1a4bff 85.34%,
           #62d8f9 99.57%
         );
+        color: rgba(255, 255, 255, 0);
         -webkit-background-clip: text;
         background-clip: text;
       }
     }
     .time__title {
       text-transform: initial;
-      font-size: 20px;
+      font-size: 22px;
+      margin: 0;
+
+      background: #12c2e9; /* fallback for old browsers */
+      background: -webkit-linear-gradient(
+        to left,
+        #f64f59,
+        #c471ed,
+        #12c2e9
+      ); /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(
+        to left,
+        #f64f59,
+        #c471ed,
+        #12c2e9
+      ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+      color: rgba(255, 255, 255, 0);
+      -webkit-background-clip: text;
+      background-clip: text;
     }
   }
 }
